syntax = "proto3";

package votechain;

service PollingStation {
  rpc Cast(Vote) returns (Result) {}
  rpc GetLatestBlock(Empty) returns (Block) {}
  rpc GetBlock(BlockNumber) returns (Block) {}
  rpc Coordinate(stream Coordination) returns (stream Coordination) {}
}

service ChainNode {
}

message Empty {}

message Vote {
  string voter_proof = 1;
  int32 race_id = 2;
  string selection = 3;
}

message Result {
  bool success = 1;
  string message = 2;
}

message Block {
  int32 number = 1;
  string parent = 2;
  int32 nonce = 3;
  string hash = 4;
  int32 capacity = 5;
  repeated Vote votes = 6;
}

message BlockNumber {
  string hash = 1;
}

message Coordination {
  oneof transaction {
    Block block = 1;
    Vote vote = 2;
  }
}
